force-app/main/default/objects/Bank_Signatory__mdt/Bank_Signatory__mdt.object-meta.xml
<CustomObject>
    <label>Bank Signatory</label>
    <pluralLabel>Bank Signatorys</pluralLabel>
</CustomObject>