force-app/main/default/objects/Bank_Signatory__mdt/fields/Name_of_Signatory__c.field-meta.xml
<CustomField>
    <fullName>Name_of_Signatory__c</fullName>
    <label>Name of Signatory</label>
    <length>255</length>
    <type>Text</type>
</CustomField>