force-app/main/default/objects/Bank_Signatory__mdt/fields/Order_Of_Signatory__c.field-meta.xml
<CustomField>
    <fullName>Order_Of_Signatory__c</fullName>
    <label>Order Of Signatory</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
    <unique>true</unique>
</CustomField>