force-app/main/default/objects/Bank_Signatory__mdt/listViews/Bank_Signatory.listView-meta.xml
<ListView>
    <fullName>Bank_Signatory</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>Email__c</columns>
    <columns>Phone__c</columns>
    <filterScope>Everything</filterScope>
    <label>Bank Signatory</label>
</ListView>